fixed uneven margin on about pallete

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -45,7 +45,6 @@
 
 .background {
   border-radius: 15px;
-  width: fit-content;
   height: fit-content;
   overflow: hidden;
   margin: 30px;
